--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
         
         <title>Rock Paper Scissors Game</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="">
     </head>
 
     <body>
+        <p> Hello world</p>
 
         <script>
-            
+            function getComputerChoice() {
+                let options = ["Rock", "Paper", "Scissor"];
+                let choice = options[Math.floor(Math.random()*options.length)];
+
+                return choice;
+                console.log(getComputerChoice)
+            }
         </script>
     </body>
 </html>
